@@ -1,3 +1,7 @@
+2010-03-07
+	Fixed a bug where hitting break from inside a SUB that had the
+	result being assigned to another variable would cause a crash
+	
 2010-02-18
 	Updated saving and restoring from config.txt
 	File open uses current buffer file path
